--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -2,11 +2,11 @@ h1{
     margin: 0;
 }
 
-h1, h2, h3{
+h1, h2, h3, h4{
     text-align: center;
 }
 
-h2, h3{
+h2, h3, h4{
     font-weight: normal;
 }
 
@@ -26,7 +26,11 @@ ul{
     padding:0;
 }
 
-
+.flex_center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .txt_center{
     text-align: center;
@@ -41,7 +45,9 @@ ul{
     padding-top: 50px;
 }
 
-
+.padding_right{
+    padding-right: 10px;
+}
 
 .margin_null{
     margin: 0;
@@ -67,8 +73,8 @@ ul{
         font-size: 6rem;
     }
 
-    .flexbox{        
-        flex-wrap: nowrap;
-        width: 50vw;         
+    .flexbox{  
+        display: flex;      
+        flex-wrap: nowrap;        
     }
 }
