--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@ h1 {
   margin: 0;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   text-align: center;
 }
 
-h2, h3 {
+h2, h3, h4 {
   font-weight: normal;
 }
 
@@ -26,6 +26,12 @@ ul {
   padding: 0;
 }
 
+.flex_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .txt_center {
   text-align: center;
 }
@@ -37,6 +43,10 @@ ul {
 
 .padding_top {
   padding-top: 50px;
+}
+
+.padding_right {
+  padding-right: 10px;
 }
 
 .margin_null {
@@ -56,8 +66,8 @@ ul {
   }
 
   .flexbox {
+    display: flex;
     flex-wrap: nowrap;
-    width: 50vw;
   }
 }
 @font-face {
@@ -168,6 +178,14 @@ section {
   width: 70vw;
 }
 
+.bar_menu {
+  display: flex;
+  flex-wrap: nowrap;
+  max-width: 100%;
+  width: 20%;
+  height: auto;
+}
+
 .scale_img {
   width: 45vw;
   box-shadow: 0px 0px 10px 6px #dadada;
@@ -197,9 +215,18 @@ section {
   background-color: #fcdfdb;
 }
 
-.width_img {
+.note_top {
   align-content: center;
+  background: -webkit-linear-gradient(0.4turn, #ffbb00, #f80000);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 10vw;
+}
+
+.note_bottom {
+  align-content: center;
+  font-size: 5vw;
   background: -webkit-linear-gradient(0.4turn, #ffbb00, #f80000);
   background-clip: text;
   -webkit-background-clip: text;
@@ -207,11 +234,11 @@ section {
 }
 
 .padding_right {
-  display: none;
+  display: inline-block;
 }
 
 .padding_left {
-  display: none;
+  display: inline-block;
 }
 
 /*Underline From Left */
@@ -248,33 +275,32 @@ section {
   color: #6b4649;
 }
 
-.flex_menu {
+.flex_column {
   display: flex;
+  flex-direction: column;
 }
 
-span {
-  float: left;
-  width: 10vw;
-  text-align: center;
-  display: block;
-}
-span:first-child {
-  width: 60vw;
-  text-align: left;
+.flex_space-between {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 }
 
-.price {
-  padding-bottom: 30px;
+.flex_nowrap {
+  flex-shrink: 0;
 }
 
 @media (min-width: 768px) {
   main {
     margin-left: auto;
     margin-right: auto;
+    width: auto;
   }
 
-  article {
-    font-size: 3rem;
+  .bar_menu {
+    max-width: 100%;
+    height: auto;
+    width: 20%;
   }
 
   .btn {
@@ -291,44 +317,17 @@ span:first-child {
     width: 80vw;
   }
 
-  .padding_right {
-    display: inline-block;
-    padding-right: 50px;
-    width: 10vw;
-  }
-
-  .padding_left {
-    display: inline-block;
-    padding-left: 50px;
-    width: 10vw;
-  }
-
   .style_menu1 {
     font-size: 5rem;
-  }
-
-  .price {
-    padding-bottom: 73px;
-  }
-
-  span {
-    width: 10vw;
-  }
-  span:first-child {
-    width: 60vw;
   }
 }
 @media (min-width: 1200px) {
   .padding_right {
-    display: inline-block;
     padding-right: 20px;
-    width: 15vw;
   }
 
   .padding_left {
-    display: inline-block;
     padding-left: 20px;
-    width: 15vw;
   }
 
   .scale_img {
@@ -349,8 +348,10 @@ span:first-child {
     font-size: 5rem;
   }
 
-  .price {
-    padding-bottom: 0;
+  .bar_menu {
+    max-width: 100%;
+    height: auto;
+    width: 30%;
   }
 }
 
